* Add swagger defs...rejig models to help Swag along
